--- a/view/layout/web/footer.tpl.html
+++ b/view/layout/web/footer.tpl.html
@@ -1,4 +1,12 @@
-<hr/>
-<footer>
-powered by LazyPHP. 2008~<?=date("Y")?>
-</footer>
+<div class="clearfix"></div>
+<div class="bottom">
+    <a href="http://mslms.net/msg/lxwm.aspx">联系我们</a> |
+    <a href="http://mslms.net/msg/about.aspx">关于我们</a> |
+    <a href="http://mslms.net/msg/zhinan.aspx">订餐指南 </a> |
+    <a href="http://mslms.net/msg/message.aspx">意见反馈 </a> |
+    <a href="http://mslms.net/usercenter/user_dangan.aspx">会员中心 </a>
+    <!--<br> Copyright &#169; 2012 www.roeasy.com
+    <a href="http://www.roeasy.com/" target="_blank">技术支持：北京融易网络工作室</a>-->
+    <br> 米嗖辣米嗖官方网上订餐外卖
+    <a href="http://www.miibeian.gov.cn/" target="_blank">蜀ICP备13014051号-2</a>　
+</div>
