--- a/view/layout/web/footer.tpl.html
+++ b/view/layout/web/footer.tpl.html
@@ -1,5 +1,5 @@
 <div class="clearfix"></div>
-<div class="bottom">
+<div id="bottom">
     <a href="http://mslms.net/msg/lxwm.aspx">联系我们</a> |
     <a href="http://mslms.net/msg/about.aspx">关于我们</a> |
     <a href="http://mslms.net/msg/zhinan.aspx">订餐指南 </a> |
