add validation for update-system-form

--- a/view/layout/web/admin/resource_bottom.tpl.html
+++ b/view/layout/web/admin/resource_bottom.tpl.html
@@ -1,10 +1,10 @@
 <!-- basic scripts -->
 <!--[if !IE]> -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>-->
 <!-- <![endif]-->
 
 <!--[if IE]>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
 <![endif]-->
 
 <!--[if !IE]> -->
@@ -25,6 +25,7 @@
 <script src="static/admin/js/bootstrap.min.js"></script>
 <script src="static/admin/js/typeahead-bs2.min.js"></script>
 <script src="static/admin/js/jquery-ui-1.10.3.full.min.js"></script>
+<script src="static/admin/js/jquery.validate.min.js"></script>
 <script src="static/admin/js/date-time/bootstrap-datepicker.min.js"></script>
 <script src="static/admin/js/date-time/bootstrap-timepicker.min.js"></script>
 <script src="static/admin/js/date-time/moment.min.js"></script>
