--- a/view/layout/web/admin/resource_head.tpl.html
+++ b/view/layout/web/admin/resource_head.tpl.html
@@ -9,7 +9,7 @@
 <![endif]-->
 
 <!-- fonts -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300"/>
+<!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300"/>-->
 
 <!-- ace styles -->
 <link rel="stylesheet" href="static/admin/css/ace.min.css"/>
