--- a/view/layout/web/admin/system.tpl.html
+++ b/view/layout/web/admin/system.tpl.html
@@ -6,7 +6,9 @@
                 <label class="col-sm-3 control-label no-padding-right" for="name"> 餐馆名称 </label>
 
                 <div class="col-sm-4">
-                    <input type="text" id="name" class="form-control" value="<?=$name?>"/>
+                    <div>
+                        <input type="text" id="name" name="name" class="form-control" value="<?=$name?>"/>
+                    </div>
                 </div>
             </div>
 
@@ -81,10 +83,10 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="introduce"> 外卖说明 </label>
+                <label class="col-sm-3 control-label no-padding-right" for="comments"> 外卖说明 </label>
 
                 <div class="col-sm-5">
-                    <textarea maxlength="50" rows="10" id="introduce" name="introduce"
+                    <textarea rows="10" id="comments" name="comments"
                               class="form-control limited"><?=$comments?></textarea>
                 </div>
             </div>
@@ -93,7 +95,7 @@
                 <div class="col-md-offset-3 col-md-9">
                     <button type="submit" class="btn btn-info">
                         <i class="icon-ok bigger-110"></i>
-                        更新配置
+                        更新设置
                     </button>
 
                     &nbsp; &nbsp; &nbsp;
@@ -115,12 +117,48 @@
         }).next().on(ace.click_event, function () {
             $(this).prev().focus();
         });
-    });
 
-    $("updateSystemForm").submit(function () {
-        var $form = $(this);
-        $.post($form.attr("action"), $form.serialize(), function () {
+        $('#updateSystemForm').validate({
+            errorElement: 'div',
+            errorClass: 'help-block',
+            focusInvalid: false,
+            rules: {
+                name: 'required',
+                phone: 'required'
+            },
+            messages: {
+                name: "请填写餐馆名称",
+                phone: "请填写订餐电话"
+            },
+            highlight: function (e) {
+                $(e).closest('.form-group').removeClass('has-info').addClass('has-error');
+            },
+            success: function (e) {
+                $(e).closest('.form-group').removeClass('has-error').addClass('has-info');
+                $(e).remove();
+            },
+            errorPlacement: function (error, element) {
+                if(element.is(':checkbox') || element.is(':radio')) {
+                    var controls = element.closest('div[class*="col-"]');
+                    if(controls.find(':checkbox,:radio').length > 1) controls.append(error);
+                    else error.insertAfter(element.nextAll('.lbl:eq(0)').eq(0));
+                }
+                else if(element.is('.select2')) {
+                    error.insertAfter(element.siblings('[class*="select2-container"]:eq(0)'));
+                }
+                else if(element.is('.chosen-select')) {
+                    error.insertAfter(element.siblings('[class*="chosen-container"]:eq(0)'));
+                }
+                else error.insertAfter(element.parent());
+            },
+            submitHandler: function (form) {
+                var $form = $(form);
+                $.post($form.attr("action"), $form.serialize(), function () {
 
-        });
+                });
+            },
+            invalidHandler: function (form) {
+            }
+        })
     });
 </script>
