--- a/view/layout/web/admin/resource_head.tpl.html
+++ b/view/layout/web/admin/resource_head.tpl.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="static/admin/css/bootstrap-timepicker.css"/>
 <link rel="stylesheet" href="static/admin/css/font-awesome.min.css"/>
 <link rel="stylesheet" href="static/admin/css/jquery-ui-1.10.3.full.min.css"/>
+<link rel="stylesheet" href="static/admin/css/common.css"/>
 
 <!--[if IE 7]>
 <link rel="stylesheet" href="static/admin/css/font-awesome-ie7.min.css"/>
