--- a/view/layout/web/admin/resource_bottom.tpl.html
+++ b/view/layout/web/admin/resource_bottom.tpl.html
@@ -30,6 +30,7 @@
 <script src="static/admin/js/date-time/bootstrap-timepicker.min.js"></script>
 <script src="static/admin/js/date-time/moment.min.js"></script>
 <script src="static/admin/js/date-time/daterangepicker.min.js"></script>
+<script src="static/admin/js/common.js"></script>
 <!-- ace scripts -->
 <script src="static/admin/js/ace-elements.min.js"></script>
 <script src="static/admin/js/ace.min.js"></script>
