--- a/view/layout/web/admin/sidebar.tpl.html
+++ b/view/layout/web/admin/sidebar.tpl.html
@@ -45,22 +45,22 @@
             </ul>
         </li>-->
         <li id="system" <?php if(g('component')=='system'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=system">
+            <a href="?c=admin&a=systemPage">
                 <i class="icon-cog"></i><span class="menu-text"> 餐馆设置 </span>
             </a>
         </li>
-        <li id="users" <?php if(g('component')=='users'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=users">
+        <li id="users" <?php if(g('component')=='userList'): ?>class="active"<?php endif;?>>
+            <a href="?c=admin&a=userListPage">
                 <i class="icon-user"></i><span class="menu-text"> 用户管理 </span>
             </a>
         </li>
-        <li id="menu" <?php if(g('component')=='menu'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=menu">
+        <li id="menu" <?php if(g('component')=='menuList'): ?>class="active"<?php endif;?>>
+            <a href="?c=admin&a=menuListPage">
                 <i class="icon-food"></i><span class="menu-text"> 菜单管理 </span>
             </a>
         </li>
-        <li id="orders" <?php if(g('component')=='orders'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=orders">
+        <li id="orders" <?php if(g('component')=='orderList'): ?>class="active"<?php endif;?>>
+            <a href="?c=admin&a=orderListPage">
                 <i class="icon-book"></i><span class="menu-text"> 订单管理 </span>
             </a>
         </li>
@@ -76,14 +76,3 @@
         }
     </script>
 </div>
-<script>
-    $(function () {
-        var sidebar_lv1 = "<?=$GLOBALS['admin']['sidebar']['lv1']?>";
-        $("#" + sidebar_lv1).addClass("active");
-        var sidebar_lv2 = "<?=$GLOBALS['admin']['sidebar']['lv2']?>";
-        if (sidebar_lv2) {
-            $("#" + sidebar_lv1).addClass("open");
-            $("#" + sidebar_lv2).addClass("active");
-        }
-    })
-</script>
