add pagination for goods list

--- a/view/layout/web/admin/resource_bottom.tpl.html
+++ b/view/layout/web/admin/resource_bottom.tpl.html
@@ -32,6 +32,7 @@
 <script src="static/admin/js/date-time/daterangepicker.min.js"></script>
 <script src="static/admin/js/jquery.dataTables.min.js"></script>
 <script src="static/admin/js/jquery.dataTables.bootstrap.js"></script>
+<script src="static/admin/js/fuelux/fuelux.spinner.min.js"></script>
 <script src="static/admin/js/common.js"></script>
 <!-- ace scripts -->
 <script src="static/admin/js/ace-elements.min.js"></script>
