--- a/view/layout/web/admin/sidebar.tpl.html
+++ b/view/layout/web/admin/sidebar.tpl.html
@@ -54,8 +54,8 @@
                 <i class="icon-user"></i><span class="menu-text"> 用户管理 </span>
             </a>
         </li>
-        <li id="menu" <?php if(g('component')=='menuList'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=menuListPage">
+        <li id="menu" <?php if(g('component')=='goodsList'): ?>class="active"<?php endif;?>>
+            <a href="?c=admin&a=goodsListPage">
                 <i class="icon-food"></i><span class="menu-text"> 菜单管理 </span>
             </a>
         </li>
