--- a/view/layout/web/admin/categoryList.tpl.html
+++ b/view/layout/web/admin/categoryList.tpl.html
@@ -1,6 +1,6 @@
 <div>
     <fieldset>
-        <legend>菜单管理</legend>
+        <legend>分类管理</legend>
         <div class="table-responsive">
             <table id="sample-table-2" class="table table-striped table-bordered table-hover">
                 <thead>
@@ -12,9 +12,9 @@
                             </label>
                         </th>
                         <th>名称</th>
-                        <th>单价</th>
+                        <th>排列顺序</th>
+                        <th>拥有菜品</th>
                         <th><i class="icon-time bigger-110 hidden-480"></i>添加时间</th>
-                        <th>状态</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -24,7 +24,7 @@
                     $rs = $pager->paginate();
                     while($rs && $c = mysql_fetch_assoc($rs)):
                 ?>
-                    <tr id="goods<?=$c['id']?>">
+                    <tr id="category<?=$c['id']?>">
                         <td class="center">
                             <label>
                                 <input type="checkbox" class="ace" name="ids[]" value="<?=$c['id']?>"/>
@@ -34,16 +34,9 @@
                         <td>
                             <a href="#"><?=$c['name']?></a>
                         </td>
-                        <td><?=$c['price']?></td>
+                        <td><?=$c['order']?></td>
+                        <td><a href="#">查看</a></td>
                         <td><?=$c['createDate']?></td>
-                        <td>
-                            <?php if($c['status']==0):?>
-                            <span class="label label-sm label-success">上架</span>
-                            <?php endif;?>
-                            <?php if($c['status']==1):?>
-                            <span class="label label-sm label-inverse arrowed-in">下架</span>
-                            <?php endif;?>
-                        </td>
                         <td>
                             <div class="visible-md visible-lg hidden-sm hidden-xs action-buttons">
                                 <a class="blue" href="#">
@@ -71,7 +64,7 @@
                     <span>删除选中</span>
                 </span>
                 <span class="ui-pg-div">
-                    <span class="ui-icon icon-plus-sign purple" onclick="addGoods()"></span>
+                    <span class="ui-icon icon-plus-sign purple" onclick="addCategory()"></span>
                     <span>新增菜品</span>
                 </span>
             </div>
@@ -84,12 +77,12 @@
     </fieldset>
 </div>
 <script type="text/javascript">
-    function addGoods() {
-        var $addMenuModal = $("#addMenuModal");
-        if ($addMenuModal.length > 0) {
-            $addMenuModal.modal();
+    function addCategory() {
+        var $addCategoryModal = $("#addCategoryModal");
+        if ($addCategoryModal.length > 0) {
+            $addCategoryModal.modal();
         } else {
-            $.get("?c=admin&a=addGoodsPage", function (data) {
+            $.get("?c=admin&a=addCategoryPage", function (data) {
                 $("body").append(data);
             });
         }
@@ -108,7 +101,7 @@
             $.message(message);
             if (message.type == "success") {
                 $.each(ids, function(i, id) {
-                    $("#goods" + id).hide();
+                    $("#category" + id).hide();
                 });
             }
         })
