--- a/view/layout/web/admin/goodsList.tpl.html
+++ b/view/layout/web/admin/goodsList.tpl.html
@@ -31,9 +31,7 @@
                                 <span class="lbl"></span>
                             </label>
                         </td>
-                        <td>
-                            <a href="#"><?=$c['name']?></a>
-                        </td>
+                        <td class="red"><?=$c['name']?></td>
                         <td><?=$c['price']?></td>
                         <td><?=$c['createDate']?></td>
                         <td>
