--- a/view/layout/web/admin/updateCategory.tpl.html
+++ b/view/layout/web/admin/updateCategory.tpl.html
@@ -1,24 +1,29 @@
-<div id="addCategoryModal" class="modal" tabindex="-1">
+<?php
+$id = $category['id'];
+$name = $category['name'];
+$order = $category['order'];
+?>
+<div id="updateCategoryModal" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="blue bigger">新增菜品分类</h4>
+                <h4 class="blue bigger">更新菜品分类</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=addCategory" id="addCategoryForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=updateCategory&id=<?=$id?>" id="updateCategoryForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-5">
                             <div class="form-group">
-                                <label for="addCategoryForm_name">名称</label>
+                                <label for="updateCategoryForm_name">名称</label>
                                 <div>
-                                    <input class="input-large" type="text" id="addCategoryForm_name" name="name"/>
+                                    <input class="input-large" type="text" id="updateCategoryForm_name" name="name" value="<?=$name?>"/>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="addCategoryForm_order">排列顺序</label>
+                                <label for="updateCategoryForm_order">排列顺序</label>
                                 <div>
-                                    <input class="input-mini" type="text" id="addCategoryForm_order" name="order"/>
+                                    <input class="input-mini" type="text" id="updateCategoryForm_order" name="order"/>
                                 </div>
                             </div>
                         </div>
@@ -26,7 +31,8 @@
                             <?php foreach($all_goods as $c):?>
                             <div class="checkbox">
                                 <label>
-                                    <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>">
+                                    <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>"
+                                        <?php if(in_array($c['id'], $goods_ids)):?>checked<?php endif;?>>
                                     <span class="lbl">&nbsp;<?=$c['name']?></span>
                                 </label>
                             </div>
@@ -52,10 +58,10 @@
 </div>
 <script>
     $(function(){
-        $("#addCategoryModal").modal();
+        $("#updateCategoryModal").modal();
 
-        $('#addCategoryForm_order').ace_spinner({
-            value: 0,
+        $('#updateCategoryForm_order').ace_spinner({
+            value: <?=$order?>,
             min: 0,
             max: 10000,
             step: 1,
@@ -63,14 +69,14 @@
             btn_down_class: 'btn-info'
         });
 
-        $('#addCategoryForm').validate({
+        $('#updateCategoryForm').validate({
             errorElement: 'div',
             errorClass: 'help-block',
             focusInvalid: false,
             rules: {
                 name: {
                     required: true,
-                    remote: '?c=admin&a=checkCategoryName'
+                    remote: '?c=admin&a=checkCategoryName&previous=<?=$name?>'
                 }
             },
             messages: {
