add goods for index

--- a/view/layout/web/admin/system.tpl.html
+++ b/view/layout/web/admin/system.tpl.html
@@ -40,7 +40,7 @@
                 <div class="col-sm-2">
                     <div class="input-group bootstrap-timepicker">
                         <input id="start_time" type="text" class="form-control" name="start_time"
-                               value="<?=$start_time?>" readonly/>
+                               value="<?=$start_time?>"/>
 						<span class="input-group-addon">
 						    <i class="icon-time bigger-110"></i>
 						</span>
@@ -56,7 +56,7 @@
                 <div class="col-sm-2">
                     <div class="input-group bootstrap-timepicker">
                         <input id="end_time" type="text" class="form-control" name="end_time"
-                               value="<?=$end_time?>" readonly/>
+                               value="<?=$end_time?>"/>
 						<span class="input-group-addon">
 						    <i class="icon-time bigger-110"></i>
 						</span>
