--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -2,7 +2,7 @@
     <div class="hdt-wrap">
         <div class="hdt">
             <div class="logo">
-                <a href="http://mslms.net/"><img src="static/img/844_8891.gif" id="ctl00_top1_top41_IMG1"></a>
+                <a href="http://mslms.net/"><img src="static/img/logo.jpg"></a>
             </div>
             <div class="hdc geyou">
                 <div class="hdi">
@@ -21,10 +21,9 @@
                     </ul>
                 </div>
 
-                <div class="search">
-                    <a><img alt="订餐页面广告2" src="static/img/548_9062.jpg"></a>
+                <div>
+                    <a><img alt="订餐页面广告2" src="static/img/ad2.jpg"></a>
                 </div>
-                <a href="http://mslms.net/dingcan.aspx?id=85#cart"><div class="cart">我的餐车（<b>3</b>）</div></a>
             </div>
         </div>
     </div>
@@ -32,6 +31,9 @@
         <div id="nav" class="nav">
             <a class="current" id="a_100" href="http://mslms.net/Default.aspx"><span>我要订餐</span></a>
             <a id="a_109" href="http://mslms.net/msg/message.aspx"><span>我要留言</span></a>
+            <a class="cart" href="javascript:;">
+                <span>我的餐车（<b>3</b>）</span>
+            </a>
         </div>
     </div>
 </div>
