--- a/static/css/home.css
+++ b/static/css/home.css
@@ -41,8 +41,7 @@ a{color:#666666;text-decoration:none;}
 #header .nav a.current:hover span{margin-left:0;padding-left:15px;background-position:left -219px;}
 #header .nav a.mobile{float:right;width:88px;height:38px;background-position:-31px -322px;padding:0 0 0 36px;margin-right:-3px;}
 #header .nav a.mobile:hover{background-position:-31px -322px;}
-#header .cart{float:right; font-size:13px; font-weight:bold; color:#888;  margin-top:23px; background-repeat:no-repeat;background-image:url("");background-position:0px -37px; height:33px; line-height:33px; width:177px; }
-#header .cart a:hover{ text-decoration:none;}
+#header .nav a.cart{float:right; font-size:13px; font-weight:bold;}
 
 .main {text-align: center; margin: 0 auto; width: 993px; background-color: #fefefe; padding: 0;}
 .main .notice {width: 100%; height: 28px; line-height: 28px;}
@@ -89,7 +88,7 @@ a{color:#666666;text-decoration:none;}
 .info {-moz-border-bottom-colors: none;-moz-border-left-colors: none;-moz-border-right-colors: none;-moz-border-top-colors: none;border-color: #E9E9E9;border-image: none;border-style: solid;border-width: 0 1px;color: #666666;padding: 5px 5px 3px 10px;}
 .info p {font-size: 13px;line-height: 26px;margin-bottom: 3px;}
 .info p .time,.info p .phone{color: #FF4800;font-size: 18px;font-style: oblique;font-weight: bold;}
-.info p .comment {color: #a52a2a;font-size: 12px;line-height: 20px;}
+.info p .comment {color: #204c9a;font-size: 12px;line-height: 20px;}
 
 #shopCart {margin: auto;width: 235px;background: none repeat scroll 0 0 #FC8F29;}
 #shopCart .items {height: auto;overflow: visible;background: none repeat scroll 0 0 #FFFAE6;margin: 0 4px;min-height: 210px;_height: 210px;padding: 0 0 0 3px;position: relative;z-index: 1;}
